# ai-dev-standards

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
.kiro/specs/reusable-ai-dev-standards-library/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
core/application/: aws-serverless.md  frontend-web.md  microservices.md
core/languages/: python.md  typescript.md
core/steering/: api-standards.md  cicd.md  repo-standards.md  security.md
docs/: philosophy.md
packs/aws-event-driven-workflow/: manifest.yaml
packs/aws-serverless-api-python/: manifest.yaml
packs/frontend-web-typescript/: manifest.yaml
scripts/: assemble-pack.py
specs/templates/: design.md  requirements.md  tasks.md
steering/: api-standards.md  cicd.md  repo-standards.md  security.md
tests/: _assemble_helpers.py  conftest.py  test_assemble_force.py  test_assemble_force_commit_rollback.py  test_assemble_force_double_fault.py  test_assemble_noforce_rejection.py  test_assemble_staging_failure.py  test_assemble_success.py  test_manifest_parsing.py  test_scan.py  test_smoke_packs.py  test_sync_steering.py  test_sync_steering_check.py  test_validate.py
tools/kiro/foundational/: product.md  structure.md  tech.md
